--- a/MediaWiki/DynamicMenu.css.mediawiki
+++ b/MediaWiki/DynamicMenu.css.mediawiki
@@ -17,6 +17,7 @@
  }
  .mw-wiki-logo {
  background-size: cover;
+ margin-top:1rem;
  }
  .mw-body, #mw-data-after-content, .mw-footer, #left-navigation {
  margin-left: 16em;
